# personal_fin_ai

./: DEPLOY.md  README.md  docker-compose.yml
backend/: .env.example  .gitignore  CLAUDE.md  Dockerfile  litellm_config.yaml  pyproject.toml
backend/app/: CLAUDE.md  __init__.py  alerter.py  categorizer.py  client.py  forecaster.py  main.py  mock_supabase.py  models.py  parser.py  research_agent.py
backend/tests/: conftest.py  run_tests.py  test_research_agent.py
backend/tests/e2e/: test_full_flow.py
backend/tests/load/: locustfile.py
backend/tests/unit/: test_alerter.py  test_categorizer.py  test_forecaster.py  test_parser.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: Budgets.tsx  Dashboard.tsx  Transactions.tsx  Upload.tsx
supabase/: schema.sql
