[project]
name = "personal-finance-ai"
version = "0.1.0"
description = "AI-powered personal finance tracker"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",

    # AI / ML
    "langgraph>=0.1.0",
    "litellm>=1.35.0",
    "openai>=1.14.0",
    "prophet>=1.1.5",
    "numpy>=1.26.0",
    "pandas>=2.1.0",

    # Database / Auth
    "supabase>=2.3.0",
    "gotrue>=1.5.0",
    "postgrest>=0.2.0",

    # Utilities
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.0",

    # Alerts
    "twilio>=8.10.0",
    "resend>=2.0.0",

    # Dev
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "mypy>=1.8.0",
    "types-requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "mypy>=1.8.0",
    "types-requests>=2.31.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-playwright>=0.4.0",
    "httpx>=0.26.0",
    "locust>=2.24.0",
    "prophet>=1.1.5",
    "litellm>=1.35.0",
    # Research Agent
    "deepeval>=1.0.0",
    "crawl4ai>=0.4.0",
    "docling>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
